# google-cloud-examples

./: .gitignore  README.md
cloud-deploy/app/: .envrc  Dockerfile  go.mod  go.sum  main.go
cloud-deploy/canary/: README.md
cloud-deploy/canary/deploy/: skaffold.yaml
cloud-deploy/canary/terraform/: data.tf  pipeline.tf  variables.tf
cloud-deploy/multi-region/: README.md
cloud-deploy/multi-region/deploy/: manifest.yaml  skaffold.yaml
cloud-deploy/multi-region/terraform/: pipeline.tf  service.tf  variables.tf
cloud-deploy/serial/: README.md
cloud-deploy/serial/terraform/: pipeline.tf  service.tf  versions.tf
docmatcher/: .tool-versions
docmatcher/backend/: .dockerignore  .envrc  README.md  api.py  api_main.py  buf.gen.yaml  docker-compose.yaml  pyproject.toml  vectorizer_main.py  vectorupdater_main.py
docmatcher/backend/api/: app.py  config.py  document_event_publisher.py  models.py
docmatcher/backend/api/v1/: app.py  document_event_publisher.py
docmatcher/backend/db/: schema.sql
docmatcher/backend/docmatcher/: __init__.py
docmatcher/backend/proto/docmatcher/: document_event.proto  feedback_event.proto  vectorizer.proto
docmatcher/backend/proto/docmatcher/v1/: docmatcher.proto  document_event.proto  feedback_event.proto
docmatcher/backend/tools/: setup_spanner_emulator.py
docmatcher/backend/vectorizer/: service.py
docmatcher/backend/vectorupdater/: app.py  vectorizer.py
docmatcher/docmatcher-web/: .eslintrc.json  package.json  pnpm-lock.yaml
docmatcher/docmatcher-web/src/: theme.ts
docmatcher/terraform/: services.tf  terraform.tf  vectorupdater.tf
go/list-bigquery-public-tables/: README.md  go.mod  heap.go  main.go
go/run-trace/app1/: Dockerfile  deploy.sh  go.sum  main.go
go/run-trace/app2/: deploy.sh  go.mod  go.sum  main.go
go/trace/: deploy.sh  go.mod  go.sum  main.go
grpc-web-envoy/: .gcloudignore  README.md  buf.gen.yaml  cloudbuild.yaml  docker-compose.yaml  envoy.yaml  proto.pb  service.template.yaml
grpc-web-envoy/envoy/: Dockerfile  Dockerfile.compose  envoy.compose.yaml  envoy.yaml
grpc-web-envoy/go/: Dockerfile  go.mod  go.sum  main.go
grpc-web-envoy/proto/bookstore/: bookstore_service.proto
grpc-web-envoy/web/: package-lock.json  package.json
grpc-web-envoy/web/src/: client.js  index.html
python/getting-started-matching-engine/: generate_and_upload_embeddings.py  pyproject.toml  search_for_similar_image.py  upsert_image.py
python/list-bigquery-public-tables/: README.md  main.py  pyproject.toml
python/palmapi-bigquery/: README.md  main.py  pyproject.toml
python/vertexai-matching-engine/: README.md  TUTORIAL.ja.md  TUTORIAL.md
python/vertexai-matching-engine/searcher/: main.py  pyproject.toml
python/vertexai-matching-engine/terraform/: main.tf  startup.sh
python/vertexai-matching-engine/updater/: main.py  (+2 more)
python/vertexai-matching-engine/vectorizer/: Dockerfile  main.py  pyproject.toml
ruby/cloud-logging/: Dockerfile  Gemfile  batch_request.sh  deploy.sh  main.rb
(+19 files in other folders)
