[tool.poetry]
name = "docmatcher"
version = "0.1.0"
description = ""
authors = ["nownabe"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.90.1"
protobuf = "^4.21.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
