[tool.poetry]
name = "getting-started-matching-engine"
version = "0.1.0"
description = ""
authors = ["nownabe <nownabe@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "getting_started_matching_engine"}]

[tool.poetry.dependencies]
python = "3.11.3"
tensorflow = "2.12.0"
google-cloud-storage = "2.8.0"
google-cloud-aiplatform = "1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
